<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButtonBackground"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:text="@string/add_task"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <EditText
                android:id="@+id/editText_add_timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_name"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/buttonCancel_add_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/background_button_dialog"
                android:text="@string/cancel"
                android:textColor="@color/colorButtonBackground" />

            <Button
                android:id="@+id/buttonAdd_add_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/background_button_dialog"
                android:text="@string/add"
                android:textColor="@color/colorButtonBackground" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>